# GigaAsrDemo

./: .gitignore  AUTHORS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  README.ru.md  check_ldd_gigaasrdemo.sh  conanfile.py  ru.auroraos.GigaAsrDemo.desktop
models/: LICENSE
models/functiongemma/: README.md  functiongemma-q8_0.gguf
models/gigaam-v3-e2e-rnnt/: v3_e2e_rnnt_decoder.int8.onnx  v3_e2e_rnnt_encoder.int8.onnx  v3_e2e_rnnt_joint.int8.onnx
qml/: GigaAsrDemo.qml
qml/cover/: DefaultCoverPage.qml
qml/pages/: AboutPage.qml  MainPage.qml
rpm/: ru.auroraos.GigaAsrDemo.spec
src/: asrworker.cpp  asrworker.h  audiobuffer.h  commandmodelmanager.cpp  commandmodelmanager.h  commandworker.cpp  commandworker.h  functioncallengine.cpp  functioncallengine.h  gigaasrrunner.cpp  gigaasrrunner.h  main.cpp  rnntrecognizer.cpp  rnntrecognizer.h  toolexecutor.cpp  toolexecutor.h
translations/: GigaAsrDemo-ru.ts  GigaAsrDemo.ts
